# StellAirium

./: .gitignore  CMakeLists.txt  DEBUG_NOTES.md  README.md  module.ini
.github/workflows/: build-plugin.yml  debug-windows.yml
src/: AircraftObject.cpp  AircraftObject.hpp  AuroraAircraft.cpp  AuroraAircraft.hpp  AuroraAircraftDialog.cpp  AuroraAircraftDialog.hpp  CMakeLists.txt
