# Plugin AuroraAircraft — root CMakeLists, ładowany przez plugins/CMakeLists.txt
# Stellarium gdy ma USE_PLUGIN_AURORAAIRCRAFT=1 i AuroraAircraft jest na liście
# STELLARIUM_PLUGINS w głównym CMakeLists.txt drzewa źródeł.

SET(AURORAAIRCRAFT_VERSION "0.0.20")
OPTION(STELLAIRIUM_SMOKE_TEST "Build StellAirium in startup smoke-test mode" OFF)
SET(STELLAIRIUM_DEBUG_STAGE "4" CACHE STRING "Startup debug stage for StellAirium full mode")
SET(STELLAIRIUM_BUILD_MODE "full" CACHE STRING "Build mode label for StellAirium")
SET(STELLAIRIUM_BUILD_COMMIT "local" CACHE STRING "Commit label for StellAirium")

ADD_DEFINITIONS(-DAURORAAIRCRAFT_PLUGIN_VERSION="${AURORAAIRCRAFT_VERSION}")
ADD_DEFINITIONS(-DAURORAAIRCRAFT_PLUGIN_LICENSE="GNU GPLv2 or later")
ADD_DEFINITIONS(-DSTELLAIRIUM_BUILD_MODE="${STELLAIRIUM_BUILD_MODE}")
ADD_DEFINITIONS(-DSTELLAIRIUM_BUILD_COMMIT="${STELLAIRIUM_BUILD_COMMIT}")
IF(STELLAIRIUM_SMOKE_TEST)
  ADD_DEFINITIONS(-DSTELLAIRIUM_SMOKE_TEST)
ELSE()
  ADD_DEFINITIONS(-DSTELLAIRIUM_DEBUG_STAGE=${STELLAIRIUM_DEBUG_STAGE})
ENDIF()

ADD_SUBDIRECTORY(src)

# Na macOS i Linuxie instalujemy do user data dir (side-load), nie do systemowego.
IF(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
ELSE(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
ENDIF(APPLE)
